# crawler

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt  conanprofile.toml  imgui.ini  results.json
.github/skills/imgui/: SKILL.md
cmake/: CompilerWarnings.cmake  Conan.cmake
src/apps/: CMakeLists.txt  main.cpp
src/apps/imgui_example/: CMakeLists.txt
src/apps/sandbox/: CMakeLists.txt  main.cpp
src/disint/: CMakeLists.txt
src/ex_lib/: CMakeLists.txt
src/ex_lib/example/: Hello.cpp  Hello.hpp
src/mykindo/: CMakeLists.txt
src/webcraw/: CMakeLists.txt  Console.cpp  Console.hpp  Crawler.cpp  Crawler.hpp  Crawler2.cpp  Crawler2.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  MainLoop.hpp  SharedObjects.hpp  TaskQueue.hpp  Threadpool.cpp  Threadpool.hpp  Timer.hpp  Trace.cpp  Trace.hpp  Url.cpp  WebCurl.cpp  WebCurl.hpp  main.cpp  urls_large_data.cpp  urls_large_data.hpp
src/webcraw/debug_tools/: ScopedTimer.cpp  ScopedTimer.hpp  TimeStatistics.hpp  Timer.hpp  Trace.hpp  TraceTimer.hpp
src/webcraw/imgui/: ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiLogger.cpp  ImGuiLogger.hpp  OpenGLModule.cpp  OpenGLModule.hpp
src/webcraw/messanger/: Messages.hpp  MessangerCore.hpp
test/: CMakeLists.txt
test/benchmark/: BasicCrawl.cpp
test/example/: HelloTest.cpp
test/utils/: Utils.hpp
test/webcrawl/: Crawler2Test.cpp  CrawlerTests.cpp  ExceptionHandlingTests.cpp  ExpetimentTests.cpp  HighLevelTests.cpp  ImGuiLoggerTests.cpp  MessangerTest.cpp  OpenGLModuleTests.cpp  QueuePackagedTaskTest.cpp  ShutdownTests.cpp
test/webcrawl/messangerExample/: Atm.hpp  BankMachine.hpp  InterfaceMachine.hpp  Messages.hpp  MessangerTest.cpp
test/webcrawl/mocks/: ImGuiLoggerMock.hpp  OpenGLModuleMock.hpp
